--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
     </div>
 
     <div class="modules-container">
-        <div class="module-card" onclick="location.href='document-reader.html'">
+        <div class="module-card" onclick="location.href='https://wuchengxiao.github.io/hfile/'">
             <div class="module-icon">📄</div>
             <div class="module-title">在线文档阅读</div>
         </div>
 
-        <div class="module-card" onclick="location.href='word-reader.html'">
+        <div class="module-card" onclick="location.href='https://wuchengxiao.github.io/hword/'">
             <div class="module-icon">📝</div>
             <div class="module-title">在线Word阅读</div>
         </div>
 
-        <div class="module-card" onclick="location.href='pinyin-practice.html'">
+        <div class="module-card" onclick="location.href='https://wuchengxiao.github.io/chineseword/'">
             <div class="module-icon">🔤</div>
             <div class="module-title">拼音练习</div>
         </div>
 
-        <div class="module-card" onclick="location.href='json-formatter.html'">
+        <div class="module-card" onclick="location.href='./formatJson/index.html'">
             <div class="module-icon">{} </div>
             <div class="module-title">JSON格式化</div>
         </div>
